# rust-axum

./: Cargo.toml  README  index.html
cargo/: .config.toml
examples/: quick_dev.rs
sql/dev_initial/: 01_create_schema.sql  02_dev_seed.sql
src/: config.rs  ctx.rs  error.rs  log.rs  main.rs  model.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/crypt/: error.rs  mod.rs  pwd.rs  token.rs
src/ctx/: mod.rs
src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
src/model/store/: error.rs  mod.rs
src/utils/: error.rs  mod.rs
src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs  routes_tickets.rs
src/web/rpc/: mod.rs
src/web/rpc/task_rpc/: mod.rs
tests/: quick_dev.rs
