[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"]}
serde = { version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"]}
tower-cookies = "0.9.0"
tower-http = { version = "0.4.3", features = ["fs"]}

[dev-dependencies]
anyhow = "1.0.75"
httpc-test = "0.1.5"
