[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["macros"]}
lazy-regex = "3.0.1"
serde = { version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"
serde_with = "3.3.0"
strum_macros = "0.25.2"
tokio = { version = "1.32.0", features = ["full"]}
tower-cookies = "0.9.0"
tower-http = { version = "0.4.3", features = ["fs"]}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
uuid =  { version = "1.4.1", features = ["v4", "fast-rng"]}
sqlx =  { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"]}

[dev-dependencies]
anyhow = "1.0.75"
httpc-test = "0.1.5"
